# EgineSearch

search_engine/: CMakeLists.txt  answers.json  readme.md
search_engine/examples/: config.json  requests.json
search_engine/include/: InvertedIndex.h  SearchServer.h  converterjson.h
search_engine/nlohmann_json/: CMakeLists.txt
search_engine/src/: CMakeLists.txt  InvertedIndex.cpp  SearchServer.cpp  converterjson.cpp  main.cpp
search_engine/test/: CMakeLists.txt  InvertedIndexTests.cpp  SearchServerTests.cpp
search_engine/tests/: CMakeLists.txt
